code boxes the white space leaving a gap on the left margin fix

--- a/anicss.css
+++ b/anicss.css
@@ -29,6 +29,10 @@ a:hover {
     
 }
 
+pre {
+    margin: 0 0 0 -200px;
+}
+
 /* ============================== */
 /* =======  CSS Library  ======== */
 /* ============================== */
